--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -92,10 +92,10 @@ nav ul li a:hover::after {
         top: 70px;
         right: 0;
         flex-direction: column;
-        align-items: start;
+        align-items: end;
         gap: 20px;
         padding: 20px;
-        border-radius: 10px;
+        border-radius: 5px;
         display: none;
     }
 
