--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -45,7 +45,7 @@
 
   .hero {
     height: 100vh;
-    background: url("./assets/cover.png") no-repeat center center/cover;
+    background: url("/assets/cover.png") no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
